workshop/iaac/tigera-image-assurance-admission-controller-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: tigera-image-assurance-admission-controller
  name: tigera-image-assurance-admission-controller
  namespace: tigera-image-assurance
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: tigera-image-assurance-admission-controller
  template:
    metadata:
      labels:
        k8s-app: tigera-image-assurance-admission-controller
        name: tigera-image-assurance-admission-controller
    spec:
      serviceAccountName: tigera-secure-container-admission-controller
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - image: quay.io/tigera/image-assurance-admission-controller:v1.2.1
          imagePullPolicy: IfNotPresent
          name: tigera-image-assurance-admission-controller
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /certs/https/
              name: certs
              readOnly: true
            - mountPath: /certs/bast
              name: tigera-secure-bast-server-tls
              readOnly: true
      imagePullSecrets:
        - name: tigera-pull-secret
      volumes:
        - name: certs
          secret:
            defaultMode: 420
            items:
              - key: tls.crt
                path: cert.pem
              - key: tls.key
                path: key.pem
            secretName: tigera-image-assurance-admission-controller-certs
        - name: tigera-secure-bast-server-tls
          secret:
            defaultMode: 420
            items:
              - key: tls.crt
                path: tls.crt
            secretName: tigera-image-assurance-api-cert
---
apiVersion: v1
kind: Service
metadata:
  name: tigera-image-assurance-admission-controller-service
  namespace: tigera-image-assurance
  labels:
    k8s-app: tigera-image-assurance-admission-controller-service
spec:
  selector:
    k8s-app: tigera-image-assurance-admission-controller
  ports:
    - port: 8089
      targetPort: 8080
      protocol: TCP
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "image-assurance.tigera.io"
webhooks:
  - name: "image-assurance.tigera.io"
    namespaceSelector:
      matchExpressions:
        - key: "tigera-admission-controller"
          operator: "In"
          values:
            - "enforcing"
    rules:
      - apiGroups:   ["*"]
        apiVersions: ["*"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods", "replicasets", "deployments", "statefulsets", "daemonsets", "jobs", "cronjobs"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "tigera-image-assurance"
        name: "tigera-image-assurance-admission-controller-service"
        path: "/admission-review"
        port: 8089
      caBundle: "BASE64_CERTIFICATE"
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
